--- a/whatsnew/3.5.po
+++ b/whatsnew/3.5.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-08-01 21:54+0100\n"
+"PO-Revision-Date: 2021-08-03 08:08+0100\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -219,7 +219,7 @@ msgid ""
 "run subprocesses <whatsnew-subprocess>`."
 msgstr ""
 "La nueva función :func:`subprocess.run` proporciona una manera :ref: ` en "
-"streaming <whatsnew-subprocess>` de ejecutar subprocesos "
+"streaming <whatsnew-subprocess>` de ejecutar subprocesos."
 
 #: ../Doc/whatsnew/3.5.rst:131
 msgid ""
@@ -456,7 +456,6 @@ msgstr ""
 "llamadas a funciones de :ref: <calls>`::"
 
 #: ../Doc/whatsnew/3.5.rst:335
-#, fuzzy
 msgid ""
 "Similarly, tuple, list, set, and dictionary displays allow multiple "
 "unpackings (see :ref:`exprlists` and :ref:`dict`)::"
@@ -466,12 +465,10 @@ msgstr ""
 "ref:`dict`)::"
 
 #: ../Doc/whatsnew/3.5.rst:353
-#, fuzzy
 msgid ":pep:`448` -- Additional Unpacking Generalizations"
-msgstr ":pep:`448` -- Generalizaciones adicionales de desembalaje"
+msgstr ":pep:`448` -- Generalizaciones adicionales de desempaquetado"
 
 #: ../Doc/whatsnew/3.5.rst:353
-#, fuzzy
 msgid ""
 "PEP written by Joshua Landau; implemented by Neil Girdhar, Thomas Wouters, "
 "and Joshua Landau."
@@ -480,21 +477,18 @@ msgstr ""
 "y Joshua Landau."
 
 #: ../Doc/whatsnew/3.5.rst:360
-#, fuzzy
 msgid "PEP 461 - percent formatting support for bytes and bytearray"
 msgstr "PEP 461 - soporte de formato porcentual para bytes y bytearray"
 
 #: ../Doc/whatsnew/3.5.rst:362
-#, fuzzy
 msgid ""
 ":pep:`461` adds support for the ``%`` :ref:`interpolation operator <bytes-"
 "formatting>` to :class:`bytes` and :class:`bytearray`."
 msgstr ""
-":pep:`461` añade soporte para el operador de interpolación ``%`` <bytes-"
-"formatting>a :class:`bytes` y :class:`bytearray`.</bytes-formatting>"
+":pep:`461` añade soporte para el :ref:`operador de interpolación <bytes-"
+"formatting>` ``%``  a :class:`bytes` y :class:`bytearray`."
 
 #: ../Doc/whatsnew/3.5.rst:366
-#, fuzzy
 msgid ""
 "While interpolation is usually thought of as a string operation, there are "
 "cases where interpolation on ``bytes`` or ``bytearrays`` makes sense, and "
@@ -508,14 +502,13 @@ msgstr ""
 "sentido, y el trabajo necesario para compensar esta funcionalidad perdida "
 "resta legibilidad al código en general.  Este problema es especialmente "
 "importante cuando se trata de protocolos con formato de cable, que suelen "
-"ser una mezcla de texto binario y compatible con ASCII."
+"ser una mezcla de texto binario y texto compatible con ASCII."
 
 #: ../Doc/whatsnew/3.5.rst:373 ../Doc/whatsnew/3.5.rst:1848
 msgid "Examples::"
 msgstr "Ejemplos::"
 
 #: ../Doc/whatsnew/3.5.rst:381
-#, fuzzy
 msgid ""
 "Unicode is not allowed for ``%b``, but it is accepted by ``%a`` (equivalent "
 "of ``repr(obj).encode('ascii', 'backslashreplace')``)::"
@@ -524,7 +517,7 @@ msgstr ""
 "(equivalente a ``repr(obj).encode('ascii', 'backslashreplace')``)::"
 
 #: ../Doc/whatsnew/3.5.rst:392
-#, fuzzy, python-format
+#, python-format
 msgid ""
 "Note that ``%s`` and ``%r`` conversion types, although supported, should "
 "only be used in codebases that need compatibility with Python 2."
@@ -534,12 +527,11 @@ msgstr ""
 "compatibilidad con Python 2."
 
 #: ../Doc/whatsnew/3.5.rst:398
-#, fuzzy, python-format
+#, python-format
 msgid ":pep:`461` -- Adding % formatting to bytes and bytearray"
-msgstr ":pep:`461` -- Añadir formato % f a bytes y bytearray"
+msgstr ":pep:`461` -- Añadir % formatacion a bytes y bytearray"
 
 #: ../Doc/whatsnew/3.5.rst:398
-#, fuzzy
 msgid ""
 "PEP written by Ethan Furman; implemented by Neil Schemenauer and Ethan "
 "Furman."
@@ -561,7 +553,6 @@ msgstr ""
 "anotaciones se ha dejado sin definir."
 
 #: ../Doc/whatsnew/3.5.rst:410
-#, fuzzy
 msgid ""
 "Experience has shown that the majority of function annotation uses were to "
 "provide type hints to function parameters and return values.  It became "
@@ -575,19 +566,17 @@ msgstr ""
 "definiciones base y las herramientas para las anotaciones de tipo."
 
 #: ../Doc/whatsnew/3.5.rst:415
-#, fuzzy
 msgid ""
 ":pep:`484` introduces a :term:`provisional module <provisional API>` to "
 "provide these standard definitions and tools, along with some conventions "
 "for situations where annotations are not available."
 msgstr ""
-":pep:`484` introduce un módulo :term: <provisional API>`provisional` para "
+":pep:`484` introduce un  :term: `módulo provisional<provisional API>` para "
 "proporcionar estas definiciones y herramientas estándar, junto con algunas "
 "convenciones para situaciones en las que las anotaciones no están "
-"disponibles.</provisional>"
+"disponibles."
 
 #: ../Doc/whatsnew/3.5.rst:419
-#, fuzzy
 msgid ""
 "For example, here is a simple function whose argument and return type are "
 "declared in the annotations::"
@@ -596,7 +585,6 @@ msgstr ""
 "declaran en las anotaciones::"
 
 #: ../Doc/whatsnew/3.5.rst:425
-#, fuzzy
 msgid ""
 "While these annotations are available at runtime through the usual :attr:"
 "`__annotations__` attribute, *no automatic type checking happens at "
@@ -612,7 +600,6 @@ msgstr ""
 "demanda."
 
 #: ../Doc/whatsnew/3.5.rst:431
-#, fuzzy
 msgid ""
 "The type system supports unions, generic types, and a special type named :"
 "class:`~typing.Any` which is consistent with (i.e. assignable to and from) "
@@ -623,14 +610,12 @@ msgstr ""
 "desde) todos los tipos."
 
 #: ../Doc/whatsnew/3.5.rst:437
-#, fuzzy
 msgid ":mod:`typing` module documentation"
-msgstr "Documentación del módulo :mod:`typing"
+msgstr "Documentación del módulo :mod:`typing`"
 
 #: ../Doc/whatsnew/3.5.rst:439
-#, fuzzy
 msgid ":pep:`484` -- Type Hints"
-msgstr ":pep:`484` -- Consejos de tipo"
+msgstr ":pep:`484` -- Anotaciones de tirado"
 
 #: ../Doc/whatsnew/3.5.rst:439
 msgid ""
@@ -641,17 +626,14 @@ msgstr ""
 "implementado por Guido van Rossum."
 
 #: ../Doc/whatsnew/3.5.rst:441
-#, fuzzy
 msgid ":pep:`483` -- The Theory of Type Hints"
-msgstr ":pep:`483` -- La teoría de las sugerencias de tipo"
+msgstr ":pep:`483` -- La teoría de las anotaciones de tipado"
 
 #: ../Doc/whatsnew/3.5.rst:442
-#, fuzzy
 msgid "PEP written by Guido van Rossum"
 msgstr "PEP escrito por Guido van Rossum"
 
 #: ../Doc/whatsnew/3.5.rst:448
-#, fuzzy
 msgid ""
 "PEP 471 - os.scandir() function -- a better and faster directory iterator"
 msgstr ""
@@ -659,7 +641,6 @@ msgstr ""
 "rápido"
 
 #: ../Doc/whatsnew/3.5.rst:450
-#, fuzzy
 msgid ""
 ":pep:`471` adds a new directory iteration function, :func:`os.scandir`, to "
 "the standard library.  Additionally, :func:`os.walk` is now implemented "
@@ -676,7 +657,6 @@ msgstr ""
 "necesarias para recorrer un árbol de directorios."
 
 #: ../Doc/whatsnew/3.5.rst:457
-#, fuzzy
 msgid ""
 "Additionally, ``scandir`` returns an iterator, as opposed to returning a "
 "list of file names, which improves memory efficiency when iterating over "
@@ -687,7 +667,6 @@ msgstr ""
 "sobre directorios muy grandes."
 
 #: ../Doc/whatsnew/3.5.rst:461
-#, fuzzy
 msgid ""
 "The following example shows a simple use of :func:`os.scandir` to display "
 "all the files (excluding directories) in the given *path* that don't start "
@@ -700,7 +679,6 @@ msgstr ""
 "is_file>` generalmente no hará una llamada adicional al sistema::"
 
 #: ../Doc/whatsnew/3.5.rst:472
-#, fuzzy
 msgid ""
 ":pep:`471` -- os.scandir() function -- a better and faster directory iterator"
 msgstr ""
@@ -708,47 +686,41 @@ msgstr ""
 "rápido"
 
 #: ../Doc/whatsnew/3.5.rst:473
-#, fuzzy
 msgid ""
 "PEP written and implemented by Ben Hoyt with the help of Victor Stinner."
 msgstr ""
 "PEP escrito e implementado por Ben Hoyt con la ayuda de Victor Stinner."
 
 #: ../Doc/whatsnew/3.5.rst:479
-#, fuzzy
 msgid "PEP 475: Retry system calls failing with EINTR"
 msgstr "PEP 475: Reintentar las llamadas al sistema que fallan con EINTR"
 
 #: ../Doc/whatsnew/3.5.rst:481
-#, fuzzy
 msgid ""
 "An :py:data:`errno.EINTR` error code is returned whenever a system call, "
 "that is waiting for I/O, is interrupted by a signal.  Previously, Python "
 "would raise :exc:`InterruptedError` in such cases.  This meant that, when "
 "writing a Python application, the developer had two choices:"
 msgstr ""
-"Se devuelve un código de error :py:data:`errno.EINTR` cada vez que una "
+"Se retorna un código de error :py:data:`errno.EINTR` cada vez que una "
 "llamada al sistema, que está esperando la E/S, es interrumpida por una "
 "señal.  Anteriormente, Python lanzaba :exc:`InterruptedError` en estos "
 "casos.  Esto significaba que, al escribir una aplicación Python, el "
 "desarrollador tenía dos opciones:"
 
 #: ../Doc/whatsnew/3.5.rst:486
-#, fuzzy
 msgid "Ignore the ``InterruptedError``."
-msgstr "Ignora el ``ErrorInterrumpido``."
+msgstr "Ignorar el ``InterruptedError``."
 
 #: ../Doc/whatsnew/3.5.rst:487
-#, fuzzy
 msgid ""
 "Handle the ``InterruptedError`` and attempt to restart the interrupted "
 "system call at every call site."
 msgstr ""
-"Maneja el ``InterruptedError`` e intenta reiniciar la llamada al sistema "
+"Manejar el ``InterruptedError`` e intenta reiniciar la llamada al sistema "
 "interrumpida en cada sitio de llamada."
 
 #: ../Doc/whatsnew/3.5.rst:490
-#, fuzzy
 msgid ""
 "The first option makes an application fail intermittently. The second option "
 "adds a large amount of boilerplate that makes the code nearly unreadable.  "
@@ -759,12 +731,10 @@ msgstr ""
 "sea casi ilegible.  Compara::"
 
 #: ../Doc/whatsnew/3.5.rst:496
-#, fuzzy
 msgid "and::"
 msgstr "y::"
 
 #: ../Doc/whatsnew/3.5.rst:505
-#, fuzzy
 msgid ""
 ":pep:`475` implements automatic retry of system calls on ``EINTR``.  This "
 "removes the burden of dealing with ``EINTR`` or :exc:`InterruptedError` in "
@@ -777,10 +747,9 @@ msgstr ""
 "`InterruptedError` en el código de usuario en la mayoría de las situaciones "
 "y hace que los programas de Python, incluyendo la biblioteca estándar, sean "
 "más robustos.  Tenga en cuenta que la llamada al sistema sólo se reintenta "
-"si el manejador de la señal no lanza una excepción."
+"si el gestor de la señal no lanza una excepción."
 
 #: ../Doc/whatsnew/3.5.rst:512
-#, fuzzy
 msgid ""
 "Below is a list of functions which are now retried when interrupted by a "
 "signal:"
@@ -789,12 +758,10 @@ msgstr ""
 "cuando se interrumpen por una señal:"
 
 #: ../Doc/whatsnew/3.5.rst:515
-#, fuzzy
 msgid ":func:`open` and :func:`io.open`;"
 msgstr ":func:`open` y :func:`io.open`;"
 
 #: ../Doc/whatsnew/3.5.rst:517
-#, fuzzy
 msgid "functions of the :mod:`faulthandler` module;"
 msgstr "funciones del módulo :mod:`faulthandler`;"
 
