--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -2148,7 +2148,7 @@ msgstr ""
 "comienza con \"aix\", seguida de campos adicionales (separados por ``'-'``) "
 "que representan los valores combinados de Versión de AIX, Release y Nivel de "
 "tecnología (primer campo), Fecha de Construcción (segundo campo) y tamaño de "
-"bits (tercer campo). Python 3.8 y anteriores devolvieron solo un campo "
+"bits (tercer campo). Python 3.8 y anteriores retornaban solo un campo "
 "adicional con la versión y lanzamiento de AIX."
 
 #: ../Doc/distutils/apiref.rst:1151
