Apply suggestions from code review
Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

--- a/faq/design.po
+++ b/faq/design.po
@@ -77,7 +77,7 @@ msgid ""
 msgstr ""
 "Debido a que no hay corchetes de inicio/fin, Python es mucho menos propenso "
 "a conflictos de estilo de codificación. En C hay muchas formas diferentes de "
-"colocar los frenillos. Después de acostumbrarse a leer y escribir código "
+"colocar llaves. Después de acostumbrarse a leer y escribir código "
 "usando un estilo en particular, es normal sentirse algo incómodo al leer (o "
 "tener que escribir) en uno diferente."
 
@@ -1185,7 +1185,7 @@ msgstr ""
 "podía generar un código \"espagueti\" desordenado que era difícil de "
 "entender y revisar. En un lenguaje de alto nivel, también es innecesario "
 "siempre que haya formas de bifurcar (en Python, con declaraciones ``if`` y "
-"``or``, ``and`` y ``if-else`` expresiones) y bucle (con declaraciones "
+"expresiones ``or``, ``and`` e ``if-else``) y repetir (con declaraciones "
 "``while`` y ``for``, que posiblemente contengan ``continue`` y ``break``)."
 
 #: ../Doc/faq/design.rst:611
