--- a/faq/library.po
+++ b/faq/library.po
@@ -1011,7 +1011,7 @@ msgid ""
 msgstr ""
 "Para evitar que la conexión TCP se bloquee, puede configurar el socket en "
 "modo sin bloqueo. Luego, cuando hagas el :meth:`socket.connect`, te "
-"conectarás inmediatamente (poco probable) o obtendrás una excepción que "
+"conectarás inmediatamente (poco probable) u obtendrás una excepción que "
 "contiene el número de error como ``.errno``. ``errno.EINPROGRESS`` indica "
 "que la conexión está en curso, pero aún no ha terminado. Los diferentes "
 "sistemas operativos devolverán valores diferentes, por lo que tendrá que "
@@ -1026,7 +1026,7 @@ msgid ""
 "select` to check if it's writable."
 msgstr ""
 "Puede utilizar el método :meth:`socket.connect_ex` para evitar crear una "
-"excepción. Simplemente devolverá el valor de errno. Para sondear, puede "
+"excepción. Simplemente retornará el valor de errno. Para sondear, puede "
 "llamar a :meth:`socket.connect_ex` nuevamente más tarde -- ``0`` o ``errno."
 "EISCONN`` indican que está conectado -- o puede pasar este socket a :meth:"
 "`select.select` para comprobar si se puede escribir."
