--- a/glossary.po
+++ b/glossary.po
@@ -339,7 +339,7 @@ msgstr ""
 
 #: ../Doc/glossary.rst:140
 msgid "awaitable"
-msgstr "a la espera"
+msgstr "awaitable (a la espera)"
 
 #: ../Doc/glossary.rst:142
 msgid ""
