--- a/whatsnew/3.3.po
+++ b/whatsnew/3.3.po
@@ -4691,7 +4691,7 @@ msgid ""
 ":c:func:`PyUnicode_EncodeUnicodeEscape` use :c:func:"
 "`PyUnicode_AsUnicodeEscapeString`"
 msgstr ""
-":c:func:`PyUnicode_EncodeUnicodeEscape:` use :c:func:"
+":c:func:`PyUnicode_EncodeUnicodeEscape` use :c:func:"
 "`PyUnicode_AsUnicodeEscapeString`"
 
 #: ../Doc/whatsnew/3.3.rst:2314
@@ -4699,7 +4699,7 @@ msgid ""
 ":c:func:`PyUnicode_EncodeRawUnicodeEscape` use :c:func:"
 "`PyUnicode_AsRawUnicodeEscapeString`"
 msgstr ""
-":c:func:`PyUnicode_EncodeRawUnicodeEscape:` use :c:func:"
+":c:func:`PyUnicode_EncodeRawUnicodeEscape` use :c:func:"
 "`PyUnicode_AsRawUnicodeEscapeString`"
 
 #: ../Doc/whatsnew/3.3.rst:2316
