--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -4470,7 +4470,7 @@ msgid ""
 "def` functions are awaitable."
 msgstr ""
 "Un objeto :term:`awaitable` generalmente implementa a un método :meth:"
-"`__await__`. Objetos :term:`Coroutine` retornados a partir de funciones :"
+"`__await__`. Objetos :term:`Coroutine <coroutine>` retornados a partir de funciones :"
 "keyword:`async def` son esperables."
 
 #: ../Doc/reference/datamodel.rst:2654
@@ -4511,7 +4511,7 @@ msgid ""
 "raises an exception, it is propagated by the iterator.  Coroutines should "
 "not directly raise unhandled :exc:`StopIteration` exceptions."
 msgstr ""
-"Objetos :term:`Coroutine` son objetos :term:`awaitable`. La ejecución de una "
+"Objetos :term:`Coroutine <coroutine>` son objetos :term:`awaitable`. La ejecución de una "
 "corrutina puede ser controlada llamando :meth:`__await__` e iterando sobre "
 "el resultado. Cuando la corrutina ha terminado de ejecutar y retorna, el "
 "iterados levanta una excepción :exc:`StopIteration`, y el atributo :attr:"
