powrap faq/design.po

--- a/faq/design.po
+++ b/faq/design.po
@@ -77,9 +77,9 @@ msgid ""
 msgstr ""
 "Debido a que no hay corchetes de inicio/fin, Python es mucho menos propenso "
 "a conflictos de estilo de codificación. En C hay muchas formas diferentes de "
-"colocar llaves. Después de acostumbrarse a leer y escribir código "
-"usando un estilo en particular, es normal sentirse algo incómodo al leer (o "
-"tener que escribir) en uno diferente."
+"colocar llaves. Después de acostumbrarse a leer y escribir código usando un "
+"estilo en particular, es normal sentirse algo incómodo al leer (o tener que "
+"escribir) en uno diferente."
 
 #: ../Doc/faq/design.rst:38
 msgid ""
