Ajustando versión 1.0.12 y arreglando palabras faltantes

--- a/howto/functional.po
+++ b/howto/functional.po
@@ -867,7 +867,7 @@ msgid ""
 msgstr ""
 "Podría lograr el efecto de los generadores manualmente escribiendo su propia "
 "clase y guardando todas las variables locales del generador como variables "
-"de instance. Por ejemplo, retornar una lista de enteros se podría hacer "
+"de instancia. Por ejemplo, retornar una lista de enteros se podría hacer "
 "estableciendo ``self.count`` a 0, y teniendo el método :meth:`~iterator."
 "__next__` que incrementa ``self.count`` y lo retorna. Sin embargo, para un "
 "generador moderadamente complicado, escribir una clase correspondiente puede "
@@ -1512,7 +1512,7 @@ msgstr ""
 ":func:`~itertools.groupby` asume que los contenidos del iterable subyacente "
 "ya se ordenó basado en la clave. Note que los iteradores retornados también "
 "usan el iterable subyacente, así que tiene que consumir los resultados de "
-"iterator-1 antes de solicitar iterator-2 y su clave correspondiente."
+"iterador-1 antes de solicitar iterador-2 y su clave correspondiente."
 
 #: ../Doc/howto/functional.rst:989
 msgid "The functools module"
