--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -2983,7 +2983,7 @@ msgstr ""
 "El atributo :attr:`__objclass__` es interpretado por el módulo :mod:"
 "`inspect` como la especificación de la clase donde el objeto fue definido "
 "(establecer esto adecuadamente puede ayudar en introspección de atributos "
-"dinámicos de clases en tiempo de ejecución). Para llamables, puede indicar "
+"dinámicos de clases en tiempo de ejecución). Para invocables, puede indicar "
 "que una instancia de un tipo (o subclase) dado es esperado o requerido como "
 "el primero argumento posicional (por ejemplo, CPython establece este "
 "atributo para métodos independientes que son implementados en C)."
