--- a/reference/expressions.po
+++ b/reference/expressions.po
@@ -2668,7 +2668,7 @@ msgstr ""
 "La coma final sólo es requerida para crear una tupla única (también "
 "denominada un *singleton*); es opcional en todos los otros casos. Una única "
 "expresión sin una coma final no crea una tupla, si no produce el valor de "
-"esa expresion. (Para crear una tupla vacía, usa un par de paréntesis vacío: "
+"esa expresión. (Para crear una tupla vacía, usa un par de paréntesis vacío: "
 "``()``.)"
 
 #: ../Doc/reference/expressions.rst:1786
