--- a/using/windows.po
+++ b/using/windows.po
@@ -752,7 +752,7 @@ msgstr ""
 "Para instalar el paquete, asegúrate de tener las últimas actualizaciones de "
 "Windows 10 y busca \"Python |version|\" en Microsoft Store. Comprueba que la "
 "aplicación que seleccionas es una publicación de la Python Software "
-"Foundation e instálala."
+"Foundation y procede a instalarla."
 
 #: ../Doc/using/windows.rst:302
 msgid ""
