--- a/whatsnew/3.2.po
+++ b/whatsnew/3.2.po
@@ -2125,7 +2125,7 @@ msgstr ""
 #: ../Doc/whatsnew/3.2.rst:1395
 msgid "(Available on Unix systems. Patch by Sébastien Sablé in :issue:`9862`)"
 msgstr ""
-"(Disponbile en sistemas Unix. Parche de Sébastien Sablé en :issue:`9862`)"
+"(Disponible en sistemas Unix. Parche de Sébastien Sablé en :issue:`9862`)"
 
 #: ../Doc/whatsnew/3.2.rst:1398
 msgid "gzip and zipfile"
