--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -11,16 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-11-27 01:14-0300\n"
+"PO-Revision-Date: 2021-08-03 11:36+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
-"X-Generator: Poedit 2.4.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/howto/logging-cookbook.rst:5
 msgid "Logging Cookbook"
@@ -1266,6 +1266,7 @@ msgstr ""
 msgid "Inserting a BOM into messages sent to a SysLogHandler"
 msgstr "Insertar BOM en mensajes enviados a SysLogHandler"
 
+# se hizo un cambio para que no ocurriera el error de :rfc:`...` que no comienza por número.
 #: ../Doc/howto/logging-cookbook.rst:1689
 msgid ""
 ":rfc:`5424` requires that a Unicode message be sent to a syslog daemon as a "
@@ -1276,9 +1277,9 @@ msgid ""
 msgstr ""
 ":rfc:`5424` requiere que se envíe un mensaje Unicode a un demonio syslog "
 "como un conjunto de bytes que tienen la siguiente estructura: un componente "
-"opcional puro-ASCII, seguido de una Marca de Orden de Bytes UTF-8 (*BOM* por "
-"sus siglas en inglés), seguida de codificado en Unicode usando UTF-8. (See "
-"the :rfc:`relevant section of the specification <5424#section-6>`.)"
+"opcional ASCII puro, seguido de una marca de orden de bytes UTF-8 (BOM), "
+"seguida de Codificado en Unicode usando UTF-8. (Ver sección relevante de la "
+"especificación :rfc:`5424#section-6`.)"
 
 #: ../Doc/howto/logging-cookbook.rst:1695
 msgid ""
@@ -1500,7 +1501,7 @@ msgid ""
 "types of file change - e.g. setting specific POSIX permission bits - in the "
 "same way, using :func:`os.chmod`."
 msgstr ""
-"Por furtuna, este ejemplo también indica el camino hacia cómo podría "
+"Por fortuna, este ejemplo también indica el camino hacia cómo podría "
 "implementar otros tipos de cambio de archivo, por ejemplo, configurando de "
 "la misma manera bits de permisos POSIX específicos, usando :func:`os.chmod`."
 
