--- a/reference/grammar.po
+++ b/reference/grammar.po
@@ -48,8 +48,7 @@ msgid ""
 "lookahead (i.e., is required _not_ to match).  We use the ``|`` separator to "
 "mean PEG's \"ordered choice\" (written as ``/`` in traditional PEG grammars)."
 msgstr ""
-"La notación es una mezcla de `EBNF <https://en.wikipedia.org/wiki/"
-"Extended_Backus%E2%80%93Naur_form>`_ y `PEG <https://en.wikipedia.org/wiki/"
+"La notación es una mezcla de `EBNF <https://es.wikipedia.org/wiki/BNF_extendido>`_ y `PEG <https://en.wikipedia.org/wiki/"
 "Parsing_expression_grammar>`_. En particular, ``&`` seguido de un símbolo, "
 "ficha o grupo entre paréntesis indica una anticipación positiva (es decir, "
 "se requiere que coincida pero no se consume), mientras que ``!`` Indica una "
