Terminando entradas pendients FAQ

--- a/faq/programming.po
+++ b/faq/programming.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-08-02 11:05+0200\n"
+"PO-Revision-Date: 2021-08-04 10:45+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -144,6 +144,9 @@ msgid ""
 "`Pylint <https://www.pylint.org/>`_ and `Pyflakes <https://github.com/PyCQA/"
 "pyflakes>`_ do basic checking that will help you catch bugs sooner."
 msgstr ""
+"`Pylint <https://www.pylint.org/>`_ y `Pyflakes <https://github.com/PyCQA/"
+"pyflakes>`_ realizan comprobaciones básicas que le ayudarán a detectar "
+"errores antes."
 
 #: ../Doc/faq/programming.rst:63
 msgid ""
@@ -1803,6 +1806,10 @@ msgid ""
 "replacement with an implicit or explicit forward iteration. Here are three "
 "variations.::"
 msgstr ""
+"Al igual que con la eliminación de duplicados, una posibilidad es iterar "
+"explícitamente a la inversa con una condición de eliminación. Sin embargo, "
+"es más fácil y rápido utilizar el reemplazo de sectores con una iteración "
+"directa implícita o explícita. Aquí hay tres variaciones.::"
 
 #: ../Doc/faq/programming.rst:1168
 msgid "The list comprehension may be fastest."
@@ -2302,6 +2309,10 @@ msgid ""
 "this trick is also handy if you want to decide dynamically (e.g. depending "
 "on availability of resources) which base class to use.  Example::"
 msgstr ""
+"Puede asignar la clase base a un alias y derivar del alias. Entonces todo lo "
+"que tiene que cambiar es el valor asignado al alias. Por cierto, este truco "
+"también es útil si desea decidir dinámicamente (por ejemplo, dependiendo de "
+"la disponibilidad de recursos) qué clase base usar. Ejemplo::"
 
 #: ../Doc/faq/programming.rst:1531
 msgid "How do I create static class data and static class methods?"
