--- a/copyright.po
+++ b/copyright.po
@@ -6,49 +6,59 @@
 # Check https://github.com/python/python-docs-es/blob/3.8/TRANSLATORS to
 # get the list of volunteers
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2021-08-04 10:56+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"Language: es\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/copyright.rst:3
 msgid "Copyright"
-msgstr ""
+msgstr "Derechos de autor"
 
 #: ../Doc/copyright.rst:5
 msgid "Python and this documentation is:"
-msgstr ""
+msgstr "Python y esta documentación es:"
 
 #: ../Doc/copyright.rst:7
 msgid "Copyright © 2001-2021 Python Software Foundation. All rights reserved."
 msgstr ""
+"Copyright © 2001-2021 Python Software Foundation. Todos los derechos "
+"reservados."
 
 #: ../Doc/copyright.rst:9
 msgid "Copyright © 2000 BeOpen.com. All rights reserved."
-msgstr ""
+msgstr "Copyright © 2000 BeOpen.com. Todos los derechos reservados."
 
 #: ../Doc/copyright.rst:11
 msgid ""
 "Copyright © 1995-2000 Corporation for National Research Initiatives. All "
 "rights reserved."
 msgstr ""
+"Copyright © 1995-2000 Corporation for National Research Initiatives. Todos "
+"los derechos reservados."
 
 #: ../Doc/copyright.rst:14
 msgid ""
 "Copyright © 1991-1995 Stichting Mathematisch Centrum. All rights reserved."
 msgstr ""
+"Copyright © 1991-1995 Stichting Mathematisch Centrum.  Todos los derechos "
+"reservados."
 
 #: ../Doc/copyright.rst:18
 msgid ""
 "See :ref:`history-and-license` for complete license and permissions "
 "information."
 msgstr ""
+"Consulte :ref:`history-and-license` para obtener información completa sobre "
+"licencias y permisos."
