Terminando traducción glossary.po

--- a/glossary.po
+++ b/glossary.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 18:30-0300\n"
-"Last-Translator: María Andrea Vignau\n"
+"PO-Revision-Date: 2021-08-04 11:03+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/glossary.rst:5
 msgid "Glossary"
@@ -462,13 +463,15 @@ msgstr ""
 
 #: ../Doc/glossary.rst:191
 msgid "callback"
-msgstr ""
+msgstr "retrollamada"
 
 #: ../Doc/glossary.rst:193
 msgid ""
 "A subroutine function which is passed as an argument to be executed at some "
 "point in the future."
 msgstr ""
+"Una función de subrutina que se pasa como un argumento para ejecutarse en "
+"algún momento en el futuro."
 
 #: ../Doc/glossary.rst:195
 msgid "class"
@@ -710,13 +713,13 @@ msgstr ""
 "clases."
 
 #: ../Doc/glossary.rst:304
-#, fuzzy
 msgid ""
 "For more information about descriptors' methods, see :ref:`descriptors` or "
 "the :ref:`Descriptor How To Guide <descriptorhowto>`."
 msgstr ""
-"Para mayor información sobre los métodos de los descriptores vea :ref:"
-"`descriptors`."
+"Para obtener más información sobre los métodos de los descriptores, "
+"consulte :ref:`descriptors` o :ref:`Descriptor How To Guide "
+"<descriptorhowto>`."
 
 #: ../Doc/glossary.rst:306
 msgid "dictionary"
@@ -733,9 +736,8 @@ msgstr ""
 "meth:`__eq__` . Son llamadas hash en Perl."
 
 #: ../Doc/glossary.rst:311
-#, fuzzy
 msgid "dictionary comprehension"
-msgstr "comprensión de listas"
+msgstr "comprensión de diccionarios"
 
 #: ../Doc/glossary.rst:313
 msgid ""
@@ -744,6 +746,10 @@ msgid ""
 "range(10)}`` generates a dictionary containing key ``n`` mapped to value ``n "
 "** 2``. See :ref:`comprehensions`."
 msgstr ""
+"Una forma compacta de procesar todos o parte de los elementos en un iterable "
+"y retornar un diccionario con los resultados. ``results = {n: n ** 2 for n "
+"in range(10)}`` genera un diccionario que contiene la clave ``n`` asignada "
+"al valor ``n ** 2``. Ver :ref:`comprehensions`."
 
 #: ../Doc/glossary.rst:317
 msgid "dictionary view"
@@ -1141,9 +1147,8 @@ msgstr ""
 "func:`functools.singledispatch`, y :pep:`443`."
 
 #: ../Doc/glossary.rst:485
-#, fuzzy
 msgid "generic type"
-msgstr "función genérica"
+msgstr "tipos genéricos"
 
 #: ../Doc/glossary.rst:487
 msgid ""
@@ -1151,12 +1156,17 @@ msgid ""
 "`list`. Used for :term:`type hints <type hint>` and :term:`annotations "
 "<annotation>`."
 msgstr ""
+"Un :term:`type` que se puede parametrizar; normalmente un contenedor como :"
+"class:`list`. Usado para :term:`type hints <type hint>` y :term:`annotations "
+"<annotation>`."
 
 #: ../Doc/glossary.rst:491
 msgid ""
 "See :pep:`483` for more details, and :mod:`typing` or :ref:`generic alias "
 "type <types-genericalias>` for its uses."
 msgstr ""
+"Ver :pep:`483` para más detalles, y :mod:`typing` o :ref:`tipo alias "
+"genérico <types-genericalias>` para sus usos."
 
 #: ../Doc/glossary.rst:493
 msgid "GIL"
@@ -1421,7 +1431,6 @@ msgid "iterable"
 msgstr "iterable"
 
 #: ../Doc/glossary.rst:599
-#, fuzzy
 msgid ""
 "An object capable of returning its members one at a time. Examples of "
 "iterables include all sequence types (such as :class:`list`, :class:`str`, "
@@ -1431,11 +1440,11 @@ msgid ""
 "term:`Sequence <sequence>` semantics."
 msgstr ""
 "Un objeto capaz de retornar sus miembros uno por vez. Ejemplos de iterables "
-"son todos los tipos de secuencias (como  :class:`list`, :class:`str`, y :"
+"son todos los tipos de secuencias (como :class:`list`, :class:`str`, y :"
 "class:`tuple`) y algunos de tipos no secuenciales, como :class:`dict`, :term:"
 "`objeto archivo <file object>`, y objetos de cualquier clase que defina con "
 "los métodos :meth:`__iter__` o con un método :meth:`__getitem__` que "
-"implementen la semántica de :term:`Sequence`."
+"implementen la semántica de :term:`Sequence <sequence>`."
 
 #: ../Doc/glossary.rst:606
 msgid ""
@@ -2212,7 +2221,7 @@ msgstr "argumento posicional"
 
 #: ../Doc/glossary.rst:935
 msgid "provisional API"
-msgstr "API provisoria"
+msgstr "API provisional"
 
 #: ../Doc/glossary.rst:937
 msgid ""
@@ -2405,7 +2414,6 @@ msgstr ""
 "`immutable` y no por enteros."
 
 #: ../Doc/glossary.rst:1035
-#, fuzzy
 msgid ""
 "The :class:`collections.abc.Sequence` abstract base class defines a much "
 "richer interface that goes beyond just :meth:`__getitem__` and :meth:"
@@ -2413,16 +2421,15 @@ msgid ""
 "meth:`__reversed__`. Types that implement this expanded interface can be "
 "registered explicitly using :func:`~abc.ABCMeta.register`."
 msgstr ""
-"La clase base abstracta :class:`collections.abc.Sequence` define una "
+"La clase abstracta base :class:`collections.abc.Sequence` define una "
 "interfaz mucho más rica que va más allá de sólo :meth:`__getitem__` y :meth:"
 "`__len__`, agregando :meth:`count`, :meth:`index`, :meth:`__contains__`, y :"
 "meth:`__reversed__`. Los tipos que implementan esta interfaz expandida "
 "pueden ser registrados explícitamente usando :func:`~abc.register`."
 
 #: ../Doc/glossary.rst:1042
-#, fuzzy
 msgid "set comprehension"
-msgstr "comprensión de listas"
+msgstr "comprensión de conjuntos"
 
 #: ../Doc/glossary.rst:1044
 msgid ""
@@ -2431,6 +2438,10 @@ msgid ""
 "not in 'abc'}`` generates the set of strings ``{'r', 'd'}``.  See :ref:"
 "`comprehensions`."
 msgstr ""
+"Una forma compacta de procesar todos o parte de los elementos en un iterable "
+"y retornar un conjunto con los resultados. ``results = {c for c in "
+"'abracadabra' if c not in 'abc'}`` genera el conjunto de cadenas ``{'r', 'd'}"
+"``. Ver :ref:`comprehensions`."
 
 #: ../Doc/glossary.rst:1048
 msgid "single dispatch"
