--- a/reference/import.po
+++ b/reference/import.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-06-01 08:26-0400\n"
-"Last-Translator: @Jighdan\n"
+"PO-Revision-Date: 2021-08-02 19:27+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/reference/import.rst:6
 msgid "The import system"
@@ -185,7 +186,6 @@ msgstr ""
 "un atributo ``__path__`` se considera un paquete."
 
 #: ../Doc/reference/import.rst:85
-#, fuzzy
 msgid ""
 "All modules have a name.  Subpackage names are separated from their parent "
 "package name by a dot, akin to Python's standard attribute access syntax.  "
@@ -195,7 +195,7 @@ msgid ""
 msgstr ""
 "Todos los módulos tienen un nombre.  Los nombres de los subpaquetes se "
 "separan del nombre del paquete padre por puntos, similar a la sintaxis de "
-"acceso a atributos estándar de Python.  Así, puedes tener un módulo llamado :"
+"acceso a atributos estándar de Python. Así, puedes tener un módulo llamado :"
 "mod:`sys` y un paquete llamado :mod:`email`, que a su vez tiene un "
 "subpaquete llamado :mod:`email.mime` y un módulo dentro de ese subpaquete "
 "llamado :mod:`email.mime.text`."
@@ -1313,7 +1313,6 @@ msgid "Cached bytecode invalidation"
 msgstr "Invalidación del código de bytes en caché"
 
 #: ../Doc/reference/import.rst:683
-#, fuzzy
 msgid ""
 "Before Python loads cached bytecode from a ``.pyc`` file, it checks whether "
 "the cache is up-to-date with the source ``.py`` file. By default, Python "
@@ -1322,13 +1321,13 @@ msgid ""
 "cache file by checking the stored metadata in the cache file against the "
 "source's metadata."
 msgstr ""
-"Antes de que Python cargue el código de bytes almacenado en caché desde el "
-"archivo ``.pyc``, comprueba si la memoria caché está actualizada con el "
-"archivo de origen ``.py``. De forma predeterminada, Python lo hace "
-"almacenando la última marca de tiempo y el tamaño modificados del origen en "
-"el archivo de caché al escribirlo. En tiempo de ejecución, el sistema de "
-"importación valida el archivo de caché comprobando los metadatos almacenados "
-"en el archivo de caché con los metadatos del origen."
+"Antes de que Python cargue el código de bytes en caché de un archivo ``."
+"pyc``, verifica si el caché está actualizado con el archivo ``.py`` de "
+"origen. De forma predeterminada, Python hace esto almacenando la marca de "
+"tiempo y el tamaño de la última modificación de la fuente en el archivo de "
+"caché al escribirlo. En tiempo de ejecución, el sistema de importación "
+"valida el archivo de caché comprobando los metadatos almacenados en el "
+"archivo de caché con los metadatos de la fuente."
 
 #: ../Doc/reference/import.rst:690
 msgid ""
@@ -1700,16 +1699,15 @@ msgstr ""
 "establecido (con una excepción)."
 
 #: ../Doc/reference/import.rst:859
-#, fuzzy
 msgid ""
 "To indicate to the import machinery that the spec represents a namespace :"
 "term:`portion`, the path entry finder sets \"submodule_search_locations\" to "
 "a list containing the portion."
 msgstr ""
-"Para indicar a la máquina de importación que la especificación representa un "
-"espacio de nombres :term:`portion`, el buscador de entradas de ruta "
-"establece \"loader\" en la especificación en ``None`` y "
-"\"submodule_search_locations\" en una lista que contiene la parte."
+"Para indicar a la maquinaria de importación que la especificación representa "
+"un espacio de nombres :term:`portion`, el buscador de entrada de ruta "
+"establece *\"submodule_search_locations\"* en una lista que contiene la "
+"porción."
 
 #: ../Doc/reference/import.rst:863
 msgid ""
@@ -1743,6 +1741,10 @@ msgid ""
 "returns a 2-tuple where the first item is the loader and the second item is "
 "a namespace :term:`portion`."
 msgstr ""
+":meth:`~importlib.abc.PathEntryFinder.find_loader` toma un argumento, el "
+"nombre completo del módulo que se está importando. ``find_loader()`` "
+"devuelve una 2-tupla donde el primer elemento es el cargador y el segundo "
+"elemento es un espacio de nombres :term:`portion`."
 
 #: ../Doc/reference/import.rst:879
 msgid ""
@@ -1880,12 +1882,12 @@ msgid ""
 "interpreter is invoked."
 msgstr ""
 "El módulo :mod:`__main__` es un caso especial relativo al sistema de "
-"importación de Python.  Como se señaló :ref:`elsewhere <programs>`, el "
-"módulo ``__main__`` se inicializa directamente al inicio del intérprete, al "
-"igual que :mod:`sys` y :mod:`builtins`.  Sin embargo, a diferencia de esos "
-"dos, no califica estrictamente como un módulo integrado.  Esto se debe a que "
-"la forma en que se inicializa ``__main__`` depende de las marcas y otras "
-"opciones con las que se invoca el intérprete.</programs>"
+"importación de Python. Como se señaló :ref:`elsewhere <programs>`, el módulo "
+"``__main__`` se inicializa directamente al inicio del intérprete, al igual "
+"que :mod:`sys` y :mod:`builtins`. Sin embargo, a diferencia de esos dos, no "
+"califica estrictamente como un módulo integrado. Esto se debe a que la forma "
+"en que se inicializa ``__main__`` depende de las marcas y otras opciones con "
+"las que se invoca el intérprete."
 
 #: ../Doc/reference/import.rst:968
 msgid "__main__.__spec__"
@@ -1921,7 +1923,7 @@ msgstr ""
 "En :ref:`los casos restantes <using-on-interface-options>` ``__main__."
 "__spec__`` se establece en ``None``, ya que el código utilizado para "
 "rellenar el :mod:`__main__` no se corresponde directamente con un módulo "
-"importable:</using-on-interface-options>"
+"importable:"
 
 #: ../Doc/reference/import.rst:982
 msgid "interactive prompt"
@@ -2068,7 +2070,6 @@ msgid ":pep:`338` defines executing modules as scripts."
 msgstr ":pep:`338` define la ejecución de módulos como scripts."
 
 #: ../Doc/reference/import.rst:1042
-#, fuzzy
 msgid ""
 ":pep:`451` adds the encapsulation of per-module import state in spec "
 "objects.  It also off-loads most of the boilerplate responsibilities of "
@@ -2078,7 +2079,7 @@ msgid ""
 msgstr ""
 ":pep:`451` agrega la encapsulación del estado de importación por módulo en "
 "los objetos de especificación. También descargara la mayoría de las "
-"responsabilidades de los cargadores en la maquinaria de importación.  Estos "
+"responsabilidades de los cargadores en la maquinaria de importación. Estos "
 "cambios permiten el desuso de varias API en el sistema de importación y "
 "también la adición de nuevos métodos a los buscadores y cargadores."
 
