--- a/reference/grammar.po
+++ b/reference/grammar.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-09-27 23:15+0200\n"
+"PO-Revision-Date: 2021-08-02 19:28+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/reference/grammar.rst:2
 msgid "Full Grammar specification"
@@ -31,6 +32,10 @@ msgid ""
 "generate the CPython parser (see :source:`Grammar/python.gram`). The version "
 "here omits details related to code generation and error recovery."
 msgstr ""
+"Esta es la gramática completa de Python, derivada directamente de la "
+"gramática utilizada para generar el analizador CPython (ver :source:`Grammar/"
+"python.gram`). La versión aquí omite detalles relacionados con la generación "
+"de código y la recuperación de errores."
 
 #: ../Doc/reference/grammar.rst:9
 #, python-format
@@ -43,6 +48,14 @@ msgid ""
 "lookahead (i.e., is required _not_ to match).  We use the ``|`` separator to "
 "mean PEG's \"ordered choice\" (written as ``/`` in traditional PEG grammars)."
 msgstr ""
+"La notación es una mezcla de `EBNF <https://es.wikipedia.org/wiki/"
+"BNF_extendido>`_ y `PEG <https://en.wikipedia.org/wiki/"
+"Parsing_expression_grammar>`_. En particular, ``&`` seguido de un símbolo, "
+"ficha o grupo entre paréntesis indica una anticipación positiva (es decir, "
+"se requiere que coincida pero no se consume), mientras que ``!`` Indica una "
+"anticipación negativa (es decir, se requiere _no_ para partido). Usamos el "
+"separador ``|`` para referirnos a la \"elección ordenada\" de PEG (escrito "
+"como ``/`` en las gramáticas tradicionales de PEG)."
 
 #~ msgid ""
 #~ "This is the full Python grammar, as it is read by the parser generator "
