Apply suggestions from code review
Co-authored-by: Emmanuel Arias <eamanu@yaerobi.com>

--- a/license.po
+++ b/license.po
@@ -353,7 +353,7 @@ msgid ""
 "The :mod:`asynchat` and :mod:`asyncore` modules contain the following "
 "notice::"
 msgstr ""
-"Los módulos :mod:`asynchat` y :mod:`asyncore` contienen el siguiente aviso:"
+"Los módulos :mod:`asynchat` y :mod:`asyncore` contienen el siguiente aviso::"
 
 #: ../Doc/license.rst:414
 msgid "Cookie management"
@@ -361,7 +361,7 @@ msgstr "Gestión de cookies"
 
 #: ../Doc/license.rst:416
 msgid "The :mod:`http.cookies` module contains the following notice::"
-msgstr "El módulo :mod:`http.cookies` contiene el siguiente aviso:"
+msgstr "El módulo :mod:`http.cookies` contiene el siguiente aviso::"
 
 #: ../Doc/license.rst:442
 msgid "Execution tracing"
@@ -369,7 +369,7 @@ msgstr "Seguimiento de ejecución"
 
 #: ../Doc/license.rst:444
 msgid "The :mod:`trace` module contains the following notice::"
-msgstr "El módulo :mod:`trace` contiene el siguiente aviso:"
+msgstr "El módulo :mod:`trace` contiene el siguiente aviso::"
 
 #: ../Doc/license.rst:475
 msgid "UUencode and UUdecode functions"
@@ -377,7 +377,7 @@ msgstr "funciones UUencode y UUdecode"
 
 #: ../Doc/license.rst:477
 msgid "The :mod:`uu` module contains the following notice::"
-msgstr "El módulo :mod:`uu` contiene el siguiente aviso:"
+msgstr "El módulo :mod:`uu` contiene el siguiente aviso::"
 
 #: ../Doc/license.rst:505
 msgid "XML Remote Procedure Calls"
@@ -385,7 +385,7 @@ msgstr "Llamadas a procedimientos remotos XML"
 
 #: ../Doc/license.rst:507
 msgid "The :mod:`xmlrpc.client` module contains the following notice::"
-msgstr "El módulo :mod:`xmlrpc.client` contiene el siguiente aviso:"
+msgstr "El módulo :mod:`xmlrpc.client` contiene el siguiente aviso::"
 
 #: ../Doc/license.rst:538
 msgid "test_epoll"
@@ -393,7 +393,7 @@ msgstr "test_epoll"
 
 #: ../Doc/license.rst:540
 msgid "The :mod:`test_epoll` module contains the following notice::"
-msgstr "El módulo :mod:`test_epoll` contiene el siguiente aviso:"
+msgstr "El módulo :mod:`test_epoll` contiene el siguiente aviso::"
 
 #: ../Doc/license.rst:564
 msgid "Select kqueue"
@@ -404,7 +404,7 @@ msgid ""
 "The :mod:`select` module contains the following notice for the kqueue "
 "interface::"
 msgstr ""
-"El módulo :mod:`select` contiene el siguiente aviso para la interfaz kqueue:"
+"El módulo :mod:`select` contiene el siguiente aviso para la interfaz kqueue::"
 
 #: ../Doc/license.rst:595
 msgid "SipHash24"
@@ -417,7 +417,7 @@ msgid ""
 msgstr ""
 "El archivo :file:`Python/pyhash.c` contiene la implementación de Marek "
 "Majkowski del algoritmo SipHash24 de Dan Bernstein. Contiene la siguiente "
-"nota:"
+"nota::"
 
 #: ../Doc/license.rst:624
 msgid "strtod and dtoa"
@@ -435,7 +435,7 @@ msgstr ""
 "strtod para la conversión de C dobles hacia y desde cadenas, se deriva del "
 "archivo del mismo nombre de David M. Gay, actualmente disponible en http://"
 "www.netlib.org/fp/. El archivo original, recuperado el 16 de marzo de 2009, "
-"contiene el siguiente aviso de licencia y derechos de autor:"
+"contiene el siguiente aviso de licencia y derechos de autor::"
 
 #: ../Doc/license.rst:654
 msgid "OpenSSL"
@@ -453,7 +453,7 @@ msgstr ""
 "biblioteca OpenSSL para un mayor rendimiento si el sistema operativo los "
 "pone a disposición. Además, los instaladores de Windows y Mac OS X para "
 "Python pueden incluir una copia de las bibliotecas de OpenSSL, por lo que "
-"incluimos una copia de la licencia de OpenSSL aquí:"
+"incluimos una copia de la licencia de OpenSSL aquí::"
 
 #: ../Doc/license.rst:791
 msgid "expat"
